# ClaakeCode

./: .gitignore  AGENTS.md  Cargo.toml  EDIT_FILE_HARNESS_COMPARISON.md  FEATURES.md  GLOB_HARNESS_COMPARISON.md  GREP_HARNESS_COMPARISON.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.sinew/plans/: 1778703633217-0e73c375-plan-refactoring-des-trois-plus-gros-fichiers.md
claakecode-web/: index.html  styles.css
crates/claakecode-anthropic/: Cargo.toml
crates/claakecode-anthropic/src/: auth.rs  client.rs  lib.rs  model_info.rs  stream.rs
crates/claakecode-app/: Cargo.toml
crates/claakecode-app/src/: agent.rs  bash.rs  compact.rs  edit.rs  glob.rs  grep.rs  image.rs  lib.rs  mcp.rs  patch.rs  question.rs  read.rs  ripgrep.rs  skill.rs  store.rs  subagent.rs  team.rs  todo.rs  tool_names.rs  tool_run.rs  web.rs  workspace.rs  write.rs
crates/claakecode-app/src/agent/: assistant_message.rs  cancel.rs  clean_context.rs  compaction.rs  context.rs  events.rs  history.rs  mode.rs  tests.rs  tool_dispatch.rs  tool_summary.rs  turn.rs
crates/claakecode-app/src/team/: agent_turns.rs  context.rs  descriptors.rs  launch.rs  live.rs  messaging.rs  model.rs  render.rs  session.rs  status_stop.rs  task_board.rs  tests.rs
crates/claakecode-core/: Cargo.toml
crates/claakecode-core/src/: error.rs  model.rs  provider.rs  stream.rs  tool.rs
crates/claakecode-google/: Cargo.toml
crates/claakecode-google/src/: auth.rs  client.rs  lib.rs  model_info.rs  stream.rs  wire.rs
crates/claakecode-kimi/: Cargo.toml
crates/claakecode-kimi/src/: auth.rs  client.rs  lib.rs  model_info.rs  stream.rs  wire.rs
crates/claakecode-openai/: Cargo.toml
crates/claakecode-openai/src/: auth.rs  client.rs  lib.rs  model_info.rs  responses_stream.rs  stream.rs  websocket.rs  wire.rs
crates/claakecode-openrouter/: Cargo.toml
crates/claakecode-openrouter/src/: auth.rs  client.rs  model_info.rs  stream.rs  wire.rs
crates/sinew-anthropic/src/: client.rs  stream.rs
crates/sinew-app/: Cargo.toml
crates/sinew-app/src/: bash.rs  compact.rs  edit.rs  grep.rs  image.rs  lib.rs  patch.rs  read.rs  store.rs  subagent.rs  team.rs  web.rs  write.rs
crates/sinew-app/src/agent/: compaction.rs  context.rs  events.rs  history.rs  tool_dispatch.rs  tool_summary.rs  turn.rs
crates/sinew-app/src/team/: agent_turns.rs  context.rs  model.rs  tests.rs
crates/sinew-core/src/: lib.rs
crates/sinew-google/src/: client.rs  stream.rs
crates/sinew-kimi/src/: client.rs  stream.rs
crates/sinew-openai/src/: client.rs  stream.rs
crates/sinew-openrouter/: Cargo.toml
crates/sinew-openrouter/src/: auth.rs  client.rs  lib.rs  model_info.rs  stream.rs  wire.rs
crates/wilide-anthropic/: Cargo.toml
crates/wilide-anthropic/src/: auth.rs  client.rs  lib.rs  model_info.rs  stream.rs  wire.rs
crates/wilide-app/: Cargo.toml
crates/wilide-app/src/: bash.rs  compact.rs  glob.rs  grep.rs  image.rs  mcp.rs  patch.rs  question.rs  read.rs  ripgrep.rs  skill.rs  store.rs  subagent.rs  team.rs  text.rs  todo.rs  tool_run.rs  web.rs  workspace.rs
crates/wilide-app/src/agent/: assistant_message.rs  cancel.rs  clean_context.rs  compaction.rs  context.rs  events.rs  history.rs  mode.rs  tests.rs  tool_dispatch.rs  tool_summary.rs  turn.rs
crates/wilide-app/src/team/: agent_turns.rs  context.rs  model.rs  session.rs  status_stop.rs  task_board.rs  tests.rs
crates/wilide-core/: Cargo.toml
crates/wilide-core/src/: lib.rs  message.rs  model.rs
crates/wilide-google/: Cargo.toml
crates/wilide-google/src/: auth.rs  client.rs  lib.rs  model_info.rs  stream.rs
crates/wilide-kimi/: Cargo.toml
crates/wilide-kimi/src/: auth.rs  client.rs  model_info.rs  stream.rs
crates/wilide-openai/: Cargo.toml
crates/wilide-openai/src/: auth.rs  client.rs  model_info.rs  stream.rs  wire.rs
crates/wilide-openrouter/: Cargo.toml
crates/wilide-openrouter/src/: auth.rs  client.rs  model_info.rs  stream.rs
scripts/: prepare-sidecars.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecars.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: context.rs  conversations.rs  git.rs  lib.rs  main.rs  models.rs  platform.rs  providers.rs  state.rs  swarm.rs  terminal.rs  tests.rs  turns.rs  workflow.rs  workspace.rs
src/components/: ClaakeCodeMark.tsx  ConversationList.tsx  EditorPane.tsx  FileTree.tsx  GitPanel.tsx  ImageContextMenu.tsx  SettingsPane.tsx  UpdateBadge.tsx  UpdaterLockScreen.tsx  Welcome.tsx  WilideMark.tsx  WindowControls.tsx  Workspace.tsx
src/components/chat/: ChatPane.tsx  FileChangeBlock.tsx  Markdown.tsx  MermaidDiagram.tsx  Questionnaire.tsx  TodoStrip.tsx  ToolCard.tsx  stream.ts
src/lib/: ipc.ts  models.ts  monacoThemes.ts  recents.ts  theme.ts  tools.ts
