[workspace]
resolver = "2"
members = [
    "crates/wilide-core",
    "crates/wilide-anthropic",
    "crates/wilide-google",
    "crates/wilide-kimi",
    "crates/wilide-openai",
    "crates/wilide-openrouter",
    "crates/wilide-app",
    "src-tauri",
]

[workspace.package]
version = "0.1.12"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.dependencies]
wilide-core = { path = "crates/wilide-core" }
wilide-anthropic = { path = "crates/wilide-anthropic" }
wilide-google = { path = "crates/wilide-google" }
wilide-kimi = { path = "crates/wilide-kimi" }
wilide-openai = { path = "crates/wilide-openai" }
wilide-openrouter = { path = "crates/wilide-openrouter" }
wilide-app = { path = "crates/wilide-app" }

tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"
eventsource-stream = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
uuid = { version = "1", features = ["v4", "fast-rng"] }
notify = "6.1"
rand = "0.9"
sha2 = "0.10"
url = "2.5"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar = "2.6"
base64 = "0.22"
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-build = { version = "2.1" }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
walkdir = "2.5"
