[workspace]
resolver = "2"
members = [
    "crates/claakecode-core",
    "crates/claakecode-anthropic",
    "crates/claakecode-google",
    "crates/claakecode-kimi",
    "crates/claakecode-openai",
    "crates/claakecode-openrouter",
    "crates/claakecode-app",
    "src-tauri",
]

[workspace.package]
version = "0.1.20"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.dependencies]
claakecode-core = { path = "crates/claakecode-core" }
claakecode-anthropic = { path = "crates/claakecode-anthropic" }
claakecode-google = { path = "crates/claakecode-google" }
claakecode-kimi = { path = "crates/claakecode-kimi" }
claakecode-openai = { path = "crates/claakecode-openai" }
claakecode-openrouter = { path = "crates/claakecode-openrouter" }
claakecode-app = { path = "crates/claakecode-app" }

tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"
eventsource-stream = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
directories = "5"
uuid = { version = "1", features = ["v4", "fast-rng"] }
notify = "6.1"
rand = "0.9"
sha2 = "0.10"
url = "2.5"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar = "2.6"
base64 = "0.22"
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-build = { version = "2.1" }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
walkdir = "2.5"
