[package]
name = "wilide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop app for wilide"
default-run = "wilide"

[lib]
name = "wilide_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
wilide-anthropic = { workspace = true }
wilide-app = { workspace = true }
wilide-core = { workspace = true }
wilide-google = { workspace = true }
wilide-kimi = { workspace = true }
wilide-openai = { workspace = true }
wilide-openrouter = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
portable-pty = "0.9.0"
reqwest = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString"] }

# Updater plugin is desktop-only (Tauri does not ship updater for iOS/Android).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { workspace = true }

[lints]
workspace = true
