[package]
name = "claakecode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop app for Claake Code"
default-run = "claakecode"

[lib]
name = "claakecode_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
claakecode-anthropic = { workspace = true }
claakecode-app = { workspace = true }
claakecode-core = { workspace = true }
claakecode-google = { workspace = true }
claakecode-kimi = { workspace = true }
claakecode-openai = { workspace = true }
claakecode-openrouter = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
portable-pty = "0.9.0"
reqwest = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString"] }

# Updater plugin is desktop-only (Tauri does not ship updater for iOS/Android).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { workspace = true }

[lints]
workspace = true
