[package]
name = "claakecode-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless desktop runtime for ClaakeCode"

[dependencies]
claakecode-core = { workspace = true }
claakecode-openai = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
kuchikiki = "0.8.8-speedreader"
reqwest = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
portable-pty = "0.9.0"
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "json",
    "chrono",
    "uuid",
] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
