[package]
name = "claakecode-google"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Google provider for ClaakeCode"

[dependencies]
claakecode-core = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
