[package]
name = "sinew-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless desktop runtime for sinew"

[dependencies]
sinew-core = { workspace = true }
sinew-openai = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }
futures-util = { workspace = true }
kuchikiki = "0.8.8-speedreader"
reqwest = { workspace = true }
regex = { workspace = true }
portable-pty = "0.9.0"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
