[package]
name = "wilide-kimi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kimi provider for wilide"

[dependencies]
wilide-core = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[lints]
workspace = true
