[package]
name = "wilide-openrouter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenRouter provider integration for wilide"

[dependencies]
wilide-core = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
